--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next": "^14.2.0",
     "framer-motion": "^10.16.0",
-    "lucide-react": "^0.309.0"
+    "lucide-react": "^0.309.0",
+    "next": "^14.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.39.1",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
