--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "framer-motion": "^10.16.0",
+    "@react-spring/three": "^10.0.3",
+    "@react-spring/web": "^10.0.3",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.309.0",
     "next": "^14.2.0",
     "react": "^18.3.1",
