--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@react-spring/three": "^10.0.3",
     "@react-spring/web": "^10.0.3",
+    "country-state-city": "^3.2.1",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.309.0",
     "next": "^14.2.0",
