--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@react-spring/three": "^10.0.3",
     "@react-spring/web": "^10.0.3",
+    "@types/nodemailer": "^7.0.5",
     "country-state-city": "^3.2.1",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.309.0",
     "next": "^14.2.0",
+    "nodemailer": "^7.0.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
