--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "^14.2.0",
     "nodemailer": "^7.0.12",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
